# Jacquard

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  uninstall.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/: SineBank.h
src/engine/: HeatmapData.cpp  HeatmapData.h  SetharesEngine.cpp  SetharesEngine.h  SnapEngine.cpp  SnapEngine.h
src/ipc/: IpcClient.cpp  IpcClient.h  IpcMessage.h  IpcServer.cpp  IpcServer.h  SessionManager.cpp  SessionManager.h
src/midi/: MpeAllocator.cpp  MpeAllocator.h  MpeOutputEngine.cpp  MpeOutputEngine.h
src/model/: Chord.h  ChordTimeline.cpp  ChordTimeline.h  FullTimeCode.h  Options.h  Tone.h
src/ui/: HeatmapComponent.cpp  HeatmapComponent.h  OptionsPanel.cpp  OptionsPanel.h  TimelineBar.cpp  TimelineBar.h  TransportPanel.cpp  TransportPanel.h
